# nodepp-bluetooth

./: CMakeLists.txt  README.md
example/: escanning-bluetooth.cpp
include/bluetooth/: bsocket.h  bth.h
include/bluetooth/posix/: bluetooth.cpp  bluetooth.h
include/bluetooth/windows/: bluetooth.cpp  bluetooth.h
